[tool.poetry]
name = "atari_breakout_rl"
version = "0.1.0"
description = "DQN agent that attempts to play atari breakout"
authors = ["Martynas Jasinskas"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tf-agents = {extras = ["reverb"], version = "^0.12.0"}
PyVirtualDisplay = "^3.0"
atari-py = "0.2.9"
opencv-python = "^4.5.5"
ale-py = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
